# graphics-programming-2022

./: .gitignore  CMakeLists.txt
.run/: Unnamed.run.xml
exercises/exercise_1/exercise_1_1_and_1_2/: main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_1/exercise_1_4/: main.cpp
exercises/exercise_1/exercise_1_5/: main.cpp
exercises/exercise_1/exercise_1_6/: main.cpp
exercises/exercise_1/exercise_1_7/: main.cpp
exercises/exercise_1/exercise_1_8/: main.cpp
exercises/exercise_10/: SDFMaterial.cpp  main.cpp
exercises/exercise_10/shaders/: empty.frag  exercise10_1.frag  sphere_lit.frag
exercises/exercise_10_solutions/: SDFMaterial.h
exercises/exercise_11/: CMakeLists.txt
exercises/exercise_11/exercise_11/: CMakeLists.txt  main.cpp
exercises/exercise_11/exercise_11/renderer/: frame_buffer.cpp  frame_buffer.h  rt_renderer.h  rt_types.h  vector.cpp  vertex.cpp
exercises/exercise_11_solutions/exercise_11_sol/: camera.h
exercises/exercise_3/exercise_3/: main.cpp
exercises/exercise_4/exercise_4_1/: main.cpp
exercises/exercise_4/exercise_4_2_to_4_7/: main.cpp
exercises/exercise_5/exercise_5_1_to_5_7/: main.cpp
exercises/exercise_6/Assets/: change1.unity  scene1.unity
exercises/exercise_6/ProjectSettings/: ProjectSettings.asset
exercises/exercise_6/Temp/: workerlic
exercises/exercise_6/UserSettings/: EditorUserSettings.asset
exercises/exercise_7/exercise_7/: main.cpp
exercises/exercise_8/: main.cpp
exercises/exercise_8/shaders/: common_shading.vert  pbr_shading.frag  phong_shading.frag
exercises/raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Material.h  RayTracer.cpp  RayTracer.h  Scene.h  Shader.cpp  Shader.h  Structs.cpp  Structs.h  main.cpp
exercises/raytracer/shaders/: library.glsl  raytracer.frag  raytracer.glsl  raytracer.vert  sample.frag
(+20 files in other folders)
